<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="montserrat_bold.ttf">
            <string>Montserrat-Bold</string>
        </array>
    </customFonts>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="loginSB" id="BYZ-38-t0r" customClass="ViewController" customModule="RestfulLogin" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOT-pJ-Win" customClass="CardView" customModule="RestfulLogin" customModuleProvider="target">
                                <rect key="frame" x="20" y="328" width="374" height="250"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="rhq-uO-f3O">
                                        <rect key="frame" x="20" y="46.5" width="334" height="157"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nKn-Dn-Lhi">
                                                <rect key="frame" x="0.0" y="0.0" width="334" height="21"/>
                                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TT2-dw-ZSp">
                                                <rect key="frame" x="0.0" y="25" width="334" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTF"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HL4-rN-YOv">
                                                <rect key="frame" x="0.0" y="63" width="334" height="21"/>
                                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ecZ-Gx-N7q">
                                                <rect key="frame" x="0.0" y="88" width="334" height="34"/>
                                                <accessibility key="accessibilityConfiguration" hint="Password" identifier="passwordTF">
                                                    <accessibilityTraits key="traits" none="YES"/>
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAr-mi-Nv6">
                                                <rect key="frame" x="0.0" y="126" width="334" height="31"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
                                                <connections>
                                                    <action selector="actionLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ujw-bS-Opg"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstItem="rhq-uO-f3O" firstAttribute="centerY" secondItem="nOT-pJ-Win" secondAttribute="centerY" id="9mF-Lz-DsR"/>
                                    <constraint firstAttribute="height" constant="250" id="bVu-6r-CAW"/>
                                    <constraint firstAttribute="trailing" secondItem="rhq-uO-f3O" secondAttribute="trailing" constant="20" id="fqK-bQ-CJj"/>
                                    <constraint firstItem="rhq-uO-f3O" firstAttribute="leading" secondItem="nOT-pJ-Win" secondAttribute="leading" constant="20" id="i8n-QV-FSe"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="25"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_svg" translatesAutoresizingMaskIntoConstraints="NO" id="cCm-hR-MTQ">
                                <rect key="frame" x="143" y="138" width="128" height="128"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="a5r-T9-km3"/>
                                    <constraint firstAttribute="width" constant="128" id="xdP-ov-SvY"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DI0-lP-mpv">
                                <rect key="frame" x="20" y="820.5" width="374" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerLbl"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="0.47171287064291689" green="0.69536314598320548" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DI0-lP-mpv" secondAttribute="trailing" constant="20" id="GCY-r7-RDH"/>
                            <constraint firstItem="nOT-pJ-Win" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="HoF-NU-Ba2"/>
                            <constraint firstItem="nOT-pJ-Win" firstAttribute="top" secondItem="cCm-hR-MTQ" secondAttribute="bottom" constant="62" id="L4x-oq-MuK"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DI0-lP-mpv" secondAttribute="bottom" constant="21" id="QcT-A5-lEY"/>
                            <constraint firstItem="cCm-hR-MTQ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XEM-TD-8sA"/>
                            <constraint firstItem="DI0-lP-mpv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kPR-zk-RUy"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nOT-pJ-Win" secondAttribute="trailing" constant="20" id="nhb-a9-PBq"/>
                            <constraint firstItem="nOT-pJ-Win" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vNN-vc-bqa"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="TT2-dw-ZSp" id="hqY-zQ-E3s"/>
                        <outlet property="loginButton" destination="pAr-mi-Nv6" id="JBk-lf-F6n"/>
                        <outlet property="logo" destination="cCm-hR-MTQ" id="Tmz-vL-k4D"/>
                        <outlet property="passwordTextField" destination="ecZ-Gx-N7q" id="GnD-xJ-anN"/>
                        <outlet property="stackView" destination="rhq-uO-f3O" id="xfQ-qq-JYK"/>
                        <outlet property="versionLbl" destination="DI0-lP-mpv" id="5GX-Sw-roB"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
        </scene>
    </scenes>
    <resources>
        <image name="logo_svg" width="1000" height="1000"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
